--- a/Alex-Dan---Home.html
+++ b/Alex-Dan---Home.html
@@ -106,7 +106,7 @@ your requirements drop me an email.</p>
                   <br>
                 </p>
                 <p class="u-text u-text-5">
-                  <span style="font-weight: 400; font-size: 1.125rem;">Good brand identity can be the difference between a business flourishing and a business failing. Today good design is essential if you want your business to stand out in the crowd and be memorable.</span>
+                  <span style="font-weight: 400; font-size: 1.125rem;">I would be able to turn your ideas into a memorable high-quality visual using means of technical skill but also creativity. I have over 6 years experience in Adobe software and I believe I am fit to develop your ideas into your desired design.  </span>
                   <br>
                 </p>
                 <p class="u-text u-text-6">
